[package]
name = "f1-led-circuit-track-data-new"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
csv = "1.3"
chrono = { version = "0.4.38", features = ["serde"] }
